tests-integration/tests/roundtrip/invalid/semantic/typecheck/partition/01/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/partition/01/input.essence:19:44:
   |
19 |               tuple (true); int(1..4)] --> partition({false, true, true}, {false, false},
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from bool

tests/roundtrip/invalid/semantic/typecheck/partition/01/input.essence:22:44:
   |
22 |                                            partition({false, false, true, true, true}, {false, true, true},
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from bool

